--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hep-pug",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "pug middleware for Hep or Koa",
   "main": "lib/index.js",
   "scripts": {
@@ -15,6 +15,7 @@
     "rose",
     "koa",
     "koa-cms",
+    "pug",
     "cms",
     "middleware",
     "middle",
