--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hep-pug",
-  "version": "1.2.0",
-  "description": "pug middleware for Hep or Koa",
+  "version": "2.0.0",
+  "description": "A pug middleware for Hep or Koa that let render views easier",
   "main": "lib/index.js",
   "scripts": {
     "test": "jest",
